--- a/package.json
+++ b/package.json
@@ -11,7 +11,13 @@
     "grunt-contrib-jshint": "^0.11.0",
     "grunt-browserify": "^3.3.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "grunt-concurrent": "^1.0.0",
+    "grunt-contrib-connect": "^0.9.0",
+    "grunt-contrib-copy": "^0.7.0",
+    "grunt-contrib-uglify": "^0.7.0",
+    "grunt-contrib-watch": "^0.6.1"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
