--- a/bower.json
+++ b/bower.json
@@ -23,5 +23,9 @@
     "gh-pages",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "jquery": "~2.1.3",
+    "normalize.styl": "~3.0.2"
+  }
 }
