--- a/package.json
+++ b/package.json
@@ -10,17 +10,16 @@
     "type": "git",
     "url": "https://github.com/xgbuils/siteswap-generator.git"
   },
-  "dependencies": {
-    "grunt": "^0.4.5",
-    "grunt-contrib-jshint": "^0.11.0",
-    "grunt-browserify": "^3.3.0"
-  },
   "devDependencies": {
-    "grunt-concurrent": "^1.0.0",
-    "grunt-contrib-connect": "^0.9.0",
-    "grunt-contrib-copy": "^0.7.0",
-    "grunt-contrib-uglify": "^0.7.0",
-    "grunt-contrib-watch": "^0.6.1"
+    "browser-sync": "^2.5.2",
+    "gulp": "^3.8.11",
+    "gulp-streamify": "0.0.5",
+    "gulp-stylus": "^2.0.1",
+    "gulp-uglify": "^1.1.0",
+    "gulp-util": "^3.0.4",
+    "nib": "^1.1.0",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.1.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
