--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "devDependencies": {
     "browser-sync": "^2.5.2",
     "gulp": "^3.8.11",
+    "gulp-if": "^1.2.5",
+    "gulp-mocha": "^2.0.1",
     "gulp-streamify": "0.0.5",
     "gulp-stylus": "^2.0.1",
     "gulp-uglify": "^1.1.0",
