using iterum package to create specific patterns

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "license": "ISC",
   "dependencies": {
     "is-object": "^1.0.1",
+    "iterum": "^0.3.0",
     "lazyarray-lite": "^0.2.0"
   }
 }
