--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
   "license": "ISC",
   "dependencies": {
     "is-object": "^1.0.1",
-    "iterum": "^0.3.0",
-    "lazyarray-lite": "^0.2.0"
+    "iterum": "^0.3.0"
   }
 }
