--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "browser-sync": "^2.5.2",
     "chai": "^3.5.0",
     "gulp": "^3.8.11",
+    "gulp-eslint": "^2.0.0",
     "gulp-if": "^1.2.5",
     "gulp-mocha": "^2.0.1",
     "gulp-streamify": "0.0.5",
